# krirk-companion-ai

./: .env.example  .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  README.md  main.py  requirements.txt
.claude/agents/: architect.md  code-writer.md  debugger.md  docs-writer.md  reviewer.md  tester.md
backend/agents/: planner.py
backend/api/: app.py  websocket.py
backend/core/: consent.py  orchestrator.py  personality.py  proactive.py  reflection.py  state.py
backend/emotions/: emotion_engine.py
backend/integrations/: claude_code.py  telegram_bridge.py
backend/memory/: knowledge_graph.py  memory_manager.py  profile_manager.py  vector_store.py
backend/providers/: __init__.py  base.py  ollama_prov.py  openai_compat.py  router.py
backend/tools/: __init__.py  base.py  executor.py  plugin_loader.py  registry.py
backend/tools/builtin/: __init__.py  automation_tools.py  browser_tools.py  calendar_tools.py  code_tools.py  desktop_tools.py  file_tools.py  media_tools.py  memory_tools.py  system_tools.py  vision_tools.py  web_tools.py
backend/vision/: __init__.py  capture.py
backend/voice/: stt.py  tts.py
configs/: config.yaml  personality.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: AvatarFloat.tsx  AvatarMode.tsx  (+11 more)
plugins/: exemplo_dado.py
scripts/: migrate_from_v1.py
tests/: test_krirk.py  test_unit.py
(+3 files in other folders)
