[package]
name = "krirk"
version = "0.1.0"
description = "KRIRK — Companion AI Desktop"
authors = ["zeuxsin"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "krirk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
